--- a/app/views/director_templates/index.html.erb
+++ b/app/views/director_templates/index.html.erb
@@ -1,3 +1,11 @@
 <h1>List of all directors</h1>
 
-<%= Director.all %>
+<table border="1">
+  <% @list_of_directors.all.each do |a_thing| %>
+    <tr>
+      <td><%= a_thing.id %></td>
+      <td><%= a_thing.image %></td>
+      <td><%= a_thing.name %></td>
+      <td><%= a_thing.dob %></td>
+    </tr>
+  <% end %>
