--- a/app/views/director_templates/index.html.erb
+++ b/app/views/director_templates/index.html.erb
@@ -1,6 +1,13 @@
 <h1>List of all directors</h1>
 
 <table border="1">
+  <tr>
+    <th>ID</th>
+    <th>Image</th>
+    <th>Name</th>
+    <th>Dob</th>
+    <th></th>
+  </tr>
   <% @list_of_directors.all.each do |a_thing| %>
     <tr>
       <td><%= a_thing.id %></td>
@@ -9,5 +16,6 @@
       </td>
       <td><%= a_thing.name %></td>
       <td><%= a_thing.dob %></td>
+      <td>Show details</td>
     </tr>
   <% end %>
