director info complete

--- a/app/views/director_templates/index.html.erb
+++ b/app/views/director_templates/index.html.erb
@@ -16,6 +16,8 @@
       </td>
       <td><%= a_thing.name %></td>
       <td><%= a_thing.dob %></td>
-      <td>Show details</td>
+      <td>
+        <a href="/directors/<%= a_thing.id %>">Show details</a>
+      </td>
     </tr>
   <% end %>
