--- a/app/views/director_templates/director_page.html.erb
+++ b/app/views/director_templates/director_page.html.erb
@@ -14,7 +14,7 @@
   <dd><%= @bio %></dd>
 
   <dt>Image</dt>
-  <dd><img src="http://robohash.org/<%= @director.image %>">
+  <dd><img src="http://robohash.org/<%= @director.id %>"></dd>
 
   <dt>Created at</dt>
   <dd><%= @created %></dd>
